# AlpacaTrader

./: .gitignore  README.md  app.py  data_processor.py  main.py  ml_models.py  models.py  performance_tracker.py  pyproject.toml  requirements.txt  risk_manager.py  trading_engine.py
data/: portfolio_history.csv
instance/: trading.db  trading_bot.db
static/css/: custom.css
static/js/: dashboard.js  settings.js
templates/: api_config.html  dashboard.html  index.html  layout.html  performance.html  settings.html
trading_engine/: __init__.py  data_fetcher.py  data_integration.py  fundamental_analysis.py  ml_model.py  news_analyzer.py  performance.py  risk_manager.py  social_sentiment.py  strategy.py  trade_executor.py
